<resources>
    <string name="app_name">Example CRUD Local</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Lista Personas</string>
    <string name="second_fragment_label">%1$s Persona</string>
    <string name="fragment_label_add">Agregar</string>
    <string name="fragment_label_update">Actualizar</string>
    <string name="title_select_image">Seleccione una imagen</string>
    <string name="title_select_image_op_1">Cámara</string>
    <string name="title_select_image_op_2">Galería</string>
    <string name="subtitle_select_image_">¿Dónde la tomaría?</string>

    <string name="desc_float_add">Agrega o edita una persona</string>
    <string name="item_people_lab_1">Nombre:</string>
    <string name="item_people_lab_2">Edad:</string>
    <string name="item_people_lab_3">Dirección:</string>
    <string name="btn_positive">Aceptar</string>
    <string name="btn_negative">Cancelar</string>
    <string name="btn_close">Cerrar</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_update">Actualizar</string>
    <string name="title_will_erase">¿Borar el registro?</string>
    <string name="message_will_erase">Esta acción no es reversible</string>

    <!-- Errors -->
    <string name="error_empty_field">Campo vacío!</string>
    <string name="error_saving_field">No se pudo guardar el registro</string>
    <string name="error_no_valid_field">No se encuentra en sistema</string>
    <string name="error_no_photo_selected">No ha seleccionado una imagen, toque el ícono para seleccionar una.</string>

    <!-- Toast -->
    <string name="toast_updated">Registro actualizado</string>
    <string name="toast_inserted">Registro agregado</string>
    <string name="toast_deleted">Registro eliminado</string>

    <!-- fields people form -->
    <string name="people_form_field_1">Nombre:</string>
    <string name="people_form_field_2">Edad:</string>
    <string name="people_form_field_3">Calle:</string>
    <string name="people_form_field_4">No. Int:</string>
    <string name="people_form_field_5">No. Ext:</string>
    <string name="people_form_field_6">Colonia:</string>
    <string name="people_form_field_7">Entidad:</string>
    <string name="people_form_field_8">Municipio/Alcadia:</string>
</resources>