<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nsv_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mainscreen.fragments.editpeople.AddPeopleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/aciv_photo_full"
            android:layout_width="@dimen/photo_size_add"
            android:layout_height="@dimen/photo_size_add"
            android:layout_marginTop="@dimen/fab_margin"
            android:scaleType="fitXY"
            android:src="@drawable/ic_no_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            style="@style/GlobalFieldsLayoutInputTextGeneric"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aciv_photo_full">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_name"
                style="@style/GlobalFieldsInputTextGeneric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/people_form_field_1"
                android:textCursorDrawable="@null"
                android:imeOptions="actionNext"
                android:nextFocusRight="@id/tiet_age"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_age"
            style="@style/GlobalFieldsLayoutInputTextGeneric"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_age"
                style="@style/GlobalFieldsInputTextNumbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/people_form_field_2"
                android:textCursorDrawable="@null"
                android:imeOptions="actionNext"
                android:nextFocusRight="@id/tiet_address"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_address"
            style="@style/GlobalFieldsLayoutInputTextGeneric"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_age">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_address"
                style="@style/GlobalFieldsInputTextGeneric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/people_form_field_3"
                android:textCursorDrawable="@null"
                android:imeOptions="actionNext"
                android:nextFocusRight="@id/tiet_number_int"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_number_int"
            style="@style/GlobalFieldsLayoutInputTextGeneric"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            app:layout_constraintEnd_toStartOf="@id/gl_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_number_int"
                style="@style/GlobalFieldsInputTextGeneric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/people_form_field_4"
                android:textCursorDrawable="@null"
                android:imeOptions="actionNext"
                android:nextFocusRight="@id/tiet_number_ext"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_number_ext"
            style="@style/GlobalFieldsLayoutInputTextGeneric"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gl_main"
            app:layout_constraintTop_toBottomOf="@id/til_address"
            android:imeOptions="actionNext"
            android:nextFocusRight="@id/tiet_suburb">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_number_ext"
                style="@style/GlobalFieldsInputTextGeneric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/people_form_field_5"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_suburb"
            style="@style/GlobalFieldsLayoutInputTextGeneric"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_number_int">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_suburb"
                style="@style/GlobalFieldsInputTextGeneric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/people_form_field_6"
                android:textCursorDrawable="@null"
                android:imeOptions="actionNext"
                android:nextFocusRight="@id/mactv_entity"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_entity"
            style="@style/GlobalFieldsLayoutInputTextGeneric"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_suburb">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/mactv_entity"
                style="@style/GlobalFieldsInputTextGeneric.MaterialTexView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/people_form_field_7"
                android:inputType="textAutoComplete"
                android:imeOptions="actionNext"
                android:nextFocusRight="@id/mactv_locale"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_locale"
            style="@style/GlobalFieldsLayoutInputTextGeneric"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_entity">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/mactv_locale"
                style="@style/GlobalFieldsInputTextGeneric.MaterialTexView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/people_form_field_8"
                android:inputType="textAutoComplete"
                android:imeOptions="actionDone"
                android:nextFocusRight="@id/acb_save"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/acb_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/field_margin_top"
            android:layout_marginBottom="@dimen/btn_margin_bottom"
            android:background="@color/title_text_color"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/btn_save"
            android:textAllCaps="false"
            android:textColor="@color/label_text_color"
            android:textSize="@dimen/btn_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/til_locale"
            app:layout_constraintStart_toStartOf="@id/til_locale"
            app:layout_constraintTop_toBottomOf="@id/til_locale" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>